--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </header>
       <!-- menu -->
       <section id="menu">
-        <button id="bottone1">Add Task</button>
-        <button id="bottone2">Add Section</button>
+        <button id="bottone1" @click="addt">Add Task</button>
+        <input v-model="valoreInput" class="txt" type="text">
       </section>
       <!-- contenitore principale -->
       <section id="cont-princ">
@@ -26,7 +26,7 @@
         <div>
           <h1 class="sec-title">New Task</h1>
           <ul>
-             <li :class=" (element.done  == false) ? 'croce' : 'spunta' " class="editorial" v-for="(element, index) in todos" :key ="index">{{ element.text }}</li>
+             <li :class=" (element.done  == false) ? 'croce' : 'spunta' " class="editorial" v-for="(element, index) in todos" :key ="index">{{ element.text }}<button class="bottone3" @click="done(index)">X</button></li>
           </ul>
         </div>
       </section>
